# currency-rates

./: .gitignore  Dockerfile  README.md  currency-rates.desktop  main.py  pyproject.toml  run.sh  run_silent.sh
