[tool.poetry]
name = "currency-rates"
version = "0.1.0"
description = "Приложение для отслеживания курсов валют ЦБ РФ с возможностью просмотра исторических данных и конвертации валют"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
requests = "^2.31.0"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
